intear-dex-management/tests/snapshots/xyk_writes__community_fees_withdraw.snap
---
source: intear-dex-management/tests/xyk_writes.rs
expression: "cli.transaction(\"bob.near\",\n&[\"xyk\", \"community-fees\", \"withdraw\", \"bob.near\", \"carol.near\"]).await"
---
$ near-intear-dex-management xyk community-fees withdraw bob.near carol.near network-config sandbox sign-with-plaintext-private-key ed25519:2y9ToyGhuue7muH4Y5sStZpcGuQ7Wmaq5g5MnT1c2LSn3rr6rSJh5f99BBi4qr3umKDznj6LTV71XGtji1dadTbt send
exit code: 0
--- stdout ---
--- stderr ---
├  sandbox · signer bob.near · dex.intear.near
│  Send the 0.000510667851416081951976 NEAR of community fees that carol.near collected on slimedragon.near/xyk to its wallet
│  Actions: execute_operations (1 yoctoNEAR, 60 Tgas)
├  Unsigned transaction:
│    signer_id:    bob.near
│    receiver_id:  dex.intear.near
│    actions:
│       -- function call:
│                       method name:  execute_operations
│                       args:         {
│                                       "operations": [
│                                         {
│                                           "DexCall": {
│                                             "dex_id": "slimedragon.near/xyk",
│                                             "method": "withdraw_community_fee",
│                                             "args": "CgAAAGNhcm9sLm5lYXI=",
│                                             "attached_assets": {}
│                                           }
│                                         }
│                                       ]
│                                     }
│                       gas:          60.0 Tgas
│                       deposit:      1 yoctoNEAR
│
├  Your transaction was signed successfully.
│    Public key: ed25519:[HASH]
│    Signature:  ed25519:[SIGNATURE]
│
├  Transaction Execution Info:
│    Gas burned: [GAS]
│    Transaction fee: [FEE]
│    Transaction ID: [HASH]
│    To see the transaction in the transaction explorer, please open this url in your browser:
│    http://[SANDBOX RPC]/transactions/[HASH]
│
├  Function execution logs:
│    Logs [dex.intear.near]:
│      Fully authorized: true
│      Executing operation 0
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"dex_balance_update","data":{"dex_id":"slimedragon.near/xyk","asset_id":"near","balance":"150716521815935521663805950"}}
│    Logs [carol.near]:   No logs
│    Logs [bob.near]:   No logs
│    Logs [dex.intear.near]:
│      After withdraw: Ok(())
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"withdraw","data":{"from":{"Dex":"slimedragon.near/xyk"},"to":"carol.near","asset_id":"near","amount":"510667851416081951976"}}
│    Logs [bob.near]:   No logs
│    Logs [bob.near]:   No logs
│
├  Function execution return value:
│    Empty return value
│


The "execute_operations" call to <dex.intear.near> on behalf of <bob.near> succeeded.

├  ✓ Sent 0.000510667851416081951976 NEAR of community fees from slimedragon.near/xyk to carol.near's wallet
│  slimedragon.near/xyk sent 0.000510667851416081951976 NEAR to carol.near's wallet


Here is your console command if you need to script it or re-run:
    near intear-dex-management xyk community-fees withdraw bob.near carol.near network-config sandbox sign-with-plaintext-private-key ed25519:2y9ToyGhuue7muH4Y5sStZpcGuQ7Wmaq5g5MnT1c2LSn3rr6rSJh5f99BBi4qr3umKDznj6LTV71XGtji1dadTbt send
