intear-dex-management/tests/snapshots/xyk_writes__community_fees_withdraw_when_there_are_none.snap
---
source: intear-dex-management/tests/xyk_writes.rs
expression: "cli.transaction(\"bob.near\",\n&[\"xyk\", \"community-fees\", \"withdraw\", \"bob.near\", \"carol.near\"]).await"
---
$ near-intear-dex-management xyk community-fees withdraw bob.near carol.near network-config sandbox sign-with-plaintext-private-key ed25519:2y9ToyGhuue7muH4Y5sStZpcGuQ7Wmaq5g5MnT1c2LSn3rr6rSJh5f99BBi4qr3umKDznj6LTV71XGtji1dadTbt send
exit code: 1
--- stdout ---
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management xyk community-fees withdraw bob.near carol.near network-config sandbox sign-with-plaintext-private-key ed25519:2y9ToyGhuue7muH4Y5sStZpcGuQ7Wmaq5g5MnT1c2LSn3rr6rSJh5f99BBi4qr3umKDznj6LTV71XGtji1dadTbt send

Error:
   0: carol.near has no community fees to withdraw on slimedragon.near/xyk
