intear-dex-management/tests/snapshots/xyk_writes__create_pool_public_with_scheduled_fees.snap
---
source: intear-dex-management/tests/xyk_writes.rs
expression: "xyk_transaction_paying_storage(&sandbox, &cli, \"bob.near\", XYK_DEX_ID,\n&[\"xyk\", \"create-pool\", \"public\", \"bob.near\", \"nep141:usdt.tether-token.near\",\n\"nep141:intel.tkn.near\", \"fees\",\n\"bob.near=0.2%..0.1%@2100-01-01T00:00:00Z..2100-07-01T00:00:00Z,pool=0.1%\"]).await"
---
$ near-intear-dex-management xyk create-pool public bob.near nep141:usdt.tether-token.near nep141:intel.tkn.near fees 'bob.near=0.2%..0.1%@2100-01-01T00:00:00Z..2100-07-01T00:00:00Z,pool=0.1%' network-config sandbox sign-with-plaintext-private-key ed25519:2y9ToyGhuue7muH4Y5sStZpcGuQ7Wmaq5g5MnT1c2LSn3rr6rSJh5f99BBi4qr3umKDznj6LTV71XGtji1dadTbt send
exit code: 0
--- stdout ---
--- stderr ---
├  sandbox · signer bob.near · dex.intear.near
│  Deposit 0.005 NEAR into bob.near's storage balance on dex.intear.near
│  Register near for bob.near, which takes about 0.00213 NEAR of bob.near's storage balance
│  Create a public USDt / INTEL pool on slimedragon.near/xyk with fees bob.near 0.2%..0.1% from 2100-01-01T00:00:00Z to 2100-07-01T00:00:00Z (linear), pool 0.1%, plus the protocol fee
│  Attach 0.00476 NEAR from bob.near's wallet for the pool's storage, which takes about that; slimedragon.near/xyk sends back what it doesn't use
│  Actions: storage_deposit (0.005 NEAR, 10 Tgas), register_assets (1 yoctoNEAR, 8 Tgas), execute_operations (0.00476 NEAR, 100 Tgas)
├  Unsigned transaction:
│    signer_id:    bob.near
│    receiver_id:  dex.intear.near
│    actions:
│       -- function call:
│                       method name:  storage_deposit
│                       args:         {}
│                       gas:          10.0 Tgas
│                       deposit:      0.005 NEAR
│       -- function call:
│                       method name:  register_assets
│                       args:         {
│                                       "asset_ids": [
│                                         "near"
│                                       ],
│                                       "for": null
│                                     }
│                       gas:          8.0 Tgas
│                       deposit:      1 yoctoNEAR
│       -- function call:
│                       method name:  execute_operations
│                       args:         {
│                                       "operations": [
│                                         {
│                                           "DexCall": {
│                                             "dex_id": "slimedragon.near/xyk",
│                                             "method": "create_pool",
│                                             "args": "ARYAAAB1c2R0LnRldGhlci10b2tlbi5uZWFyAQ4AAABpbnRlbC50a24ubmVhcgECAAAAAAgAAABib2IubmVhcgEAAKZWz8/uONAHAAAAAIET2l4mOegDAAAAAQDoAwAAAQ==",
│                                             "attached_assets": {
│                                               "near": "4760000000000000000000"
│                                             }
│                                           }
│                                         }
│                                       ]
│                                     }
│                       gas:          100.0 Tgas
│                       deposit:      0.00476 NEAR
│
├  Your transaction was signed successfully.
│    Public key: ed25519:[HASH]
│    Signature:  ed25519:[SIGNATURE]
│
├  Transaction Execution Info:
│    Gas burned: [GAS]
│    Transaction fee: [FEE]
│    Transaction ID: [HASH]
│    To see the transaction in the transaction explorer, please open this url in your browser:
│    http://[SANDBOX RPC]/transactions/[HASH]
│
├  Function execution logs:
│    Logs [dex.intear.near]:
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"user_balance_update","data":{"account_id":"bob.near","asset_id":"near","balance":"4760000000000000000000"}}
│      Fully authorized: true
│      Executing operation 0
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"dex_event","data":{"dex_id":"slimedragon.near/xyk","event":{"standard":"xyk","version":"1.0.0","event":"pool_updated","data":{"pool_id":5,"pool":{"Public":{"assets":[{"asset_id":"nep141:usdt.tether-token.near","balance":"0"},{"asset_id":"nep141:intel.tkn.near","balance":"0"}],"fees":{"receivers":[[{"Account":"bob.near"},1900],["Pool",1000],[{"Account":"plach.intear.near"},1100]]},"fee_configuration":{"receivers":[[{"Account":"bob.near"},{"Scheduled":{"start":[4102444800000000000,2000],"end":[4118083200000000000,1000],"curve":"Linear"}}],["Pool",{"Fixed":1000}]]},"total_shares":null}}}},"referrer":null,"user":"bob.near"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"user_balance_update","data":{"account_id":"bob.near","asset_id":"near","balance":"0"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"dex_balance_update","data":{"dex_id":"slimedragon.near/xyk","asset_id":"near","balance":"150665725698645329550560244"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"dex_balance_update","data":{"dex_id":"slimedragon.near/xyk","asset_id":"near","balance":"150660965698645329550560244"}}
│    Logs [bob.near]:   No logs
│
├  Function execution return value:
│    Empty return value
│
├  Function execution logs:
│    Logs [dex.intear.near]:
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"user_balance_update","data":{"account_id":"bob.near","asset_id":"near","balance":"4760000000000000000000"}}
│      Fully authorized: true
│      Executing operation 0
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"dex_event","data":{"dex_id":"slimedragon.near/xyk","event":{"standard":"xyk","version":"1.0.0","event":"pool_updated","data":{"pool_id":5,"pool":{"Public":{"assets":[{"asset_id":"nep141:usdt.tether-token.near","balance":"0"},{"asset_id":"nep141:intel.tkn.near","balance":"0"}],"fees":{"receivers":[[{"Account":"bob.near"},1900],["Pool",1000],[{"Account":"plach.intear.near"},1100]]},"fee_configuration":{"receivers":[[{"Account":"bob.near"},{"Scheduled":{"start":[4102444800000000000,2000],"end":[4118083200000000000,1000],"curve":"Linear"}}],["Pool",{"Fixed":1000}]]},"total_shares":null}}}},"referrer":null,"user":"bob.near"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"user_balance_update","data":{"account_id":"bob.near","asset_id":"near","balance":"0"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"dex_balance_update","data":{"dex_id":"slimedragon.near/xyk","asset_id":"near","balance":"150665725698645329550560244"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"dex_balance_update","data":{"dex_id":"slimedragon.near/xyk","asset_id":"near","balance":"150660965698645329550560244"}}
│    Logs [bob.near]:   No logs
│
├  Function execution return value:
│    Empty return value
│
├  Function execution logs:
│    Logs [dex.intear.near]:
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"user_balance_update","data":{"account_id":"bob.near","asset_id":"near","balance":"4760000000000000000000"}}
│      Fully authorized: true
│      Executing operation 0
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"dex_event","data":{"dex_id":"slimedragon.near/xyk","event":{"standard":"xyk","version":"1.0.0","event":"pool_updated","data":{"pool_id":5,"pool":{"Public":{"assets":[{"asset_id":"nep141:usdt.tether-token.near","balance":"0"},{"asset_id":"nep141:intel.tkn.near","balance":"0"}],"fees":{"receivers":[[{"Account":"bob.near"},1900],["Pool",1000],[{"Account":"plach.intear.near"},1100]]},"fee_configuration":{"receivers":[[{"Account":"bob.near"},{"Scheduled":{"start":[4102444800000000000,2000],"end":[4118083200000000000,1000],"curve":"Linear"}}],["Pool",{"Fixed":1000}]]},"total_shares":null}}}},"referrer":null,"user":"bob.near"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"user_balance_update","data":{"account_id":"bob.near","asset_id":"near","balance":"0"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"dex_balance_update","data":{"dex_id":"slimedragon.near/xyk","asset_id":"near","balance":"150665725698645329550560244"}}
│      EVENT_JSON:{"standard":"inteardex","version":"1.0.0","event":"dex_balance_update","data":{"dex_id":"slimedragon.near/xyk","asset_id":"near","balance":"150660965698645329550560244"}}
│    Logs [bob.near]:   No logs
│
├  Function execution return value:
│    Empty return value
│


The "storage_deposit" call to <dex.intear.near> on behalf of <bob.near> succeeded.
The "register_assets" call to <dex.intear.near> on behalf of <bob.near> succeeded.
The "execute_operations" call to <dex.intear.near> on behalf of <bob.near> succeeded.

├  ✓ Created a public USDt / INTEL pool on slimedragon.near/xyk
│  Pool #5 of slimedragon.near/xyk now holds 0 USDt and 0 INTEL
│  bob.near now has 0 NEAR on dex.intear.near


Here is your console command if you need to script it or re-run:
    near intear-dex-management xyk create-pool public bob.near nep141:usdt.tether-token.near nep141:intel.tkn.near fees 'bob.near=0.2%..0.1%@2100-01-01T00:00:00Z..2100-07-01T00:00:00Z,pool=0.1%' network-config sandbox sign-with-plaintext-private-key ed25519:2y9ToyGhuue7muH4Y5sStZpcGuQ7Wmaq5g5MnT1c2LSn3rr6rSJh5f99BBi4qr3umKDznj6LTV71XGtji1dadTbt send
